# atomsim

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: SETUP.md  phase0-convergence.md  psi4-windows-status.md
docs/superpowers/plans/: 2026-07-04-phase0-foundation.md  2026-07-05-phase1-m1-walking-skeleton.md  2026-07-06-phase1-m2-engine-depth.md  2026-07-06-phase1-m3-ui-depth.md  2026-07-07-phase1-m4-polish.md  2026-07-15-phase2-constants-panel.md  2026-07-16-phase3-classical-ghost.md  2026-07-17-phase4-force-law.md  2026-07-17-phase5-force-law-presets.md  2026-07-18-phase6-screened-atoms.md  2026-07-23-phase10-zeeman-field.md  (+3 more)
scripts/: convergence_study.py  gen_luts.py
src/atomsim/: __init__.py  atoms.py  classical.py  cli.py  constants.py  constants_lab.py  plane.py  provenance.py  sampling.py  screened_atom.py  spectra.py  systems.py
tests/: test_analysis.py  test_angular.py  test_atoms.py  test_classical.py  test_cli.py  test_constants.py  test_constants_lab.py  test_dirac.py  test_expression.py  test_fine_structure.py  test_force_law.py  test_free_form.py  test_hydrogen_analytic.py  test_import.py  test_jobs.py  test_oscillator.py  test_plane.py  test_provenance.py  test_radial_solver.py  test_sampling.py  test_schemas.py  test_screened_atom.py  test_screening.py  test_server.py  test_spectra.py  test_stark.py  test_systems.py  test_thumbnails.py  test_wavefunction.py  test_zeeman.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
(+73 files in other folders)
