[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "atomsim"
version = "0.1.0"
description = "A physically rigorous, deeply customizable quantum atom model. Never quietly lies about physics."
requires-python = ">=3.11"
license = "MIT"
dependencies = ["numpy>=2.0", "scipy>=1.13", "fastapi>=0.115", "uvicorn>=0.30"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E741"]  # physics convention: l = orbital angular momentum quantum number
